- new diving heuristic indicatordiving that focuses on indicator variables which control semicontinuous variables
- updated statistics on NLP relaxation; information on convexity of NLP has been added
- added new bandit method (EXP.3-IX) that is the new default of the ALNS heuristic

Performance improvements
------------------------

- Variable conflict-based addition of Schreier-Sims cuts for symmetry handling in prop_symmetry.c does no longer use
  an expensive explicit conflict graph construction.
- Added initialization of LP relaxation for SOC constraints.
- Avoided some numerical issues when separating SOC constraints.
- If differentation of convex expression fails in convex nlhdlr, then a perturbed point is tried.

Examples and applications
-------------------------

Interface changes
-----------------

### New and changed callbacks

- Added solution linearization callback for nonlinear handlers.
  The nonlinear handler may use this callback to add tight cuts that use the given solution as reference point to the cutpool.
  The callback is called if option constraints/nonlinear/linearizeheursol is enabled.

### Deleted and changed API methods

- SCIPtpiInitLock(), SCIPtpiDestroyLock(), SCIPtpiInitCondition(), SCIPtpiDestroyCondition() now take a double
  pointer to SCIP_LOCK/SCIP_CONDITION, respectively.
- Renamed SCIPtpiSumbitJob() to SCIPtpiSubmitJob().
- Replaced SCIPnlrowSetCurvature() by SCIPsetNlRowCurvature().

### New API functions

- new functions for interfacing with Lapack:
  SCIPlapackIsAvailable(), SCIPlapackIsAvailable(),
  SCIPlapackComputeEigenvalues(), and SCIPlapackSolveLinearEquations

  These functions should be used instead of SCIPisIpoptAvailableIpopt(), SCIPcallLapackDsyevIpopt(), and
  SCIPsolveLinearEquationsIpopt() in the context of computing eigenvalues or solving linear equations. If IPOPT is available,
  the calls will be passed on.
- SCIPmultiplyBySumExprSum(), SCIPpowerExprSum()
- SCIPsetParam()